--- a/_includes/themes/custom/default.html
+++ b/_includes/themes/custom/default.html
@@ -46,19 +46,34 @@
       </div>
     </div>
 
-    <div class="container-narrow">
-
-      <div class="content">
-        {{ content }}
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span10">
+          <div class="content">
+            {{ content }}
+          </div>
+        </div>
+        <div class="span2">
+          <div><i class="icon-folder-open"></i> All categories</div>
+          <ul class="tag_box inline">
+            {% assign categories_list = site.categories %}
+            {% include JB/categories_list %}
+          </ul>
+          <div><i class="icon-tags"></i> All tags</div>
+          <ul class="tag_box inline">
+            {% assign tags_list = site.tags %}
+            {% include JB/tags_list %}
+          </ul>
+        </div>
       </div>
       <hr>
-      <footer>
+
+      <footer class="row-fluid">
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
       </footer>
-
     </div>
 
     {% include JB/analytics %}
