Create sidebar theme

--- a/assets/themes/sidebar/css/style.css
+++ b/assets/themes/sidebar/css/style.css
@@ -1,32 +1,24 @@
-/* Custom container */
-.container-narrow {
-  margin: 0 auto;
-  max-width: 700px; }
-
-.container-narrow > hr {
-  margin: 30px 0; }
-
-.navbar .nav {
-  float: right; }
-
-/* posts index */
-.post > h3.title {
-  position: relative;
-  padding-top: 10px; }
-
-.post > h3.title span.date {
-  position: absolute;
-  right: 0;
-  font-size: 0.9em; }
-
-.post > .more {
-  margin: 10px 0;
-  text-align: left; }
-
-/* post-full*/
-.post-full .date {
+/* post */
+.page-header {
+  margin: 0; }
+.page-header > h1 {
+  margin-top: 0; }
+.post .date {
   margin-bottom: 20px;
   font-weight: bold; }
+
+/* smaller cotent headings font size */
+.content h1 { font-size: 24px;}
+.content h2 { font-size: 18px;}
+.content h3 { font-size: 16px;}
+.content h4 { font-size: 14px;}
+.content h5 { font-size: 12px;}
+.content h6 { font-size: 100%;}
+
+/* kill pagination top margin */
+.pagination {
+  margin: 0; }
+
 
 /* tag_box */
 .tag_box {
@@ -37,8 +29,9 @@
 .tag_box li {
   line-height: 28px; }
 
-.tag_box li i {
-  opacity: 0.9; }
+.tag_box li .glyphicon {
+  padding-right: .5em;
+  line-height: inherit; }
 
 .tag_box.inline li {
   float: left; }
