--- a/_includes/themes/sidebar/page.html
+++ b/_includes/themes/sidebar/page.html
@@ -1,9 +1,8 @@
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
-
-<div class="row-fluid">
-  <div class="span12">
+<div class="row">
+  <div class="col-sm-12">
     {{ content }}
   </div>
 </div>
