--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : custom
+  name : sidebar
 ---
 {% include JB/setup %}
-{% include themes/custom/default.html %}
+{% include themes/sidebar/default.html %}
