--- a/_includes/themes/sidebar/default.html
+++ b/_includes/themes/sidebar/default.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-theme.min.css">
     <!-- custom style -->
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css" media="all">
+    <!-- syntax highlight -->
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/syntax.css" media="all">
 
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
@@ -102,7 +104,7 @@
 
     {% include JB/analytics %}
     <!-- jQuery (for Bootstrap) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- bootstrap3 -->
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
   </body>
